// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test user routes /user/:githubUser/documents should return all data after updated query param 1`] = `
[
  "{"type":"timestamp","data":1685714694420}",
  "{"type":"metadata","data":{"_id":"646bae50c41d7b9a472b6078","project":"docs","branch":"master","github_username":"babadook","title":"MongoDB Manual","eol":false,"slugToTitle":{},"toctreeorder":{},"parentPaths":{},"static_files":{},"build_id":"642ec854c38bedd45ed31234","created_at":"2023-04-06T14:25:40.000Z"}}",
  "{"type":"metadata","data":{"_id":"646bae50c41d7b9a472b6081","project":"landing","branch":"updated-when-deleted","github_username":"babadook","title":"MongoDB Manual","eol":false,"slugToTitle":{},"toctreeorder":{},"parentPaths":{},"static_files":{},"build_id":"642ec854c38bedd45ed31237","created_at":"2023-04-03T13:26:40.000Z","deleted":true,"updated_at":"2023-04-06T15:25:40.000Z"}}",
  "{"type":"page","data":{"_id":"646fa1958c4f35b1d3d83ee0","page_id":"docs/docsworker-xlarge/master/data-center-foo","filename":"data-center-foo.txt","ast":{"foo":"deleted"},"static_assets":[],"created_at":"2023-04-06T13:25:40.000Z","updated_at":"2023-04-06T14:25:40.000Z","github_username":"babadook","deleted":true}}",
  "{"type":"page","data":{"_id":"646fa1958c4f35b1d3d83ee1","page_id":"docs/docsworker-xlarge/master/tutorial/insert-documents","filename":"tutorial/insert-documents.txt","ast":{"foo":"1 asset example"},"static_assets":[{"checksum":"d4dbe419766d19842ba5624cb41f6b873a513b620049e759a923894bef17742c","key":"/images/CSFLE_Master_Key_KMS.png","updated_at":"2023-04-06T14:25:40.000Z"},{"checksum":"ba1b4507fc789827edd02f979130e9633a0020b498cba915c0773403b37aedd5","key":"/images/compass-update-doc-button.png","updated_at":"2023-04-06T13:25:40.000Z"}],"created_at":"2023-04-06T13:25:40.000Z","updated_at":"2023-04-06T14:25:40.000Z","github_username":"babadook","deleted":false}}",
  "{"type":"page","data":{"_id":"646fa1958c4f35b1d3d83ee5","page_id":"landing/docsworker-xlarge/updated-when-deleted/index","filename":"index.txt","ast":{},"source":"wahoo","static_assets":[],"created_at":"2023-04-03T13:26:40.000Z","github_username":"babadook","deleted":true,"updated_at":"2023-04-06T15:25:40.000Z"}}",
  "{"type":"asset","data":{"checksum":"ba1b4507fc789827edd02f979130e9633a0020b498cba915c0773403b37aedd5","assetData":{"$binary":{"base64":"YXNzZXQtZXhhbXBsZQ==","subType":"00"}},"filenames":["/images/compass-update-doc-button.png"]}}",
  "{"type":"asset","data":{"checksum":"d4dbe419766d19842ba5624cb41f6b873a513b620049e759a923894bef17742c","assetData":{"$binary":{"base64":"YXNzZXQtZXhhbXBsZQ==","subType":"00"}},"filenames":["/images/CSFLE_Master_Key_KMS.png"]}}",
]
`;

exports[`Test user routes /user/:githubUser/documents should return all metadata and pages for all branches and all projects for 1 github user: babadook 1`] = `
[
  "{"type":"timestamp","data":1685714694420}",
  "{"type":"metadata","data":{"_id":"646bae50c41d7b9a472b6078","project":"docs","branch":"master","github_username":"babadook","title":"MongoDB Manual","eol":false,"slugToTitle":{},"toctreeorder":{},"parentPaths":{},"static_files":{},"build_id":"642ec854c38bedd45ed31234","created_at":"2023-04-06T14:25:40.000Z"}}",
  "{"type":"metadata","data":{"_id":"646bae50c41d7b9a472b6077","project":"irrelevant-docs","branch":"master","github_username":"babadook","title":"Irrelevant Docs Build Example","eol":false,"slugToTitle":{},"toctreeorder":{},"parentPaths":{},"static_files":{},"build_id":"642ec858c38bedd45ed3dd54","created_at":"2023-04-06T13:25:40.000Z"}}",
  "{"type":"metadata","data":{"_id":"646bae50c41d7b9a472b6080","project":"docs","branch":"not-master","github_username":"babadook","title":"MongoDB Manual","eol":false,"slugToTitle":{},"toctreeorder":{},"parentPaths":{},"static_files":{},"build_id":"642ec854c38bedd45ed31236","created_at":"2023-04-06T13:25:40.000Z"}}",
  "{"type":"metadata","data":{"_id":"646bae50c41d7b9a472b6081","project":"landing","branch":"updated-when-deleted","github_username":"babadook","title":"MongoDB Manual","eol":false,"slugToTitle":{},"toctreeorder":{},"parentPaths":{},"static_files":{},"build_id":"642ec854c38bedd45ed31237","created_at":"2023-04-03T13:26:40.000Z","deleted":true,"updated_at":"2023-04-06T15:25:40.000Z"}}",
  "{"type":"page","data":{"_id":"646fa1958c4f35b1d3d83edf","page_id":"docs/docsworker-xlarge/master/data-center-awareness","filename":"data-center-awareness.txt","ast":{"foo":"no assets"},"static_assets":[],"created_at":"2023-04-06T13:25:40.000Z","updated_at":"2023-04-06T13:25:40.000Z","github_username":"babadook","deleted":false}}",
  "{"type":"page","data":{"_id":"646fa1958c4f35b1d3d83ee0","page_id":"docs/docsworker-xlarge/master/data-center-foo","filename":"data-center-foo.txt","ast":{"foo":"deleted"},"static_assets":[],"created_at":"2023-04-06T13:25:40.000Z","updated_at":"2023-04-06T14:25:40.000Z","github_username":"babadook","deleted":true}}",
  "{"type":"page","data":{"_id":"646fa1958c4f35b1d3d83ee1","page_id":"docs/docsworker-xlarge/master/tutorial/insert-documents","filename":"tutorial/insert-documents.txt","ast":{"foo":"1 asset example"},"static_assets":[{"checksum":"d4dbe419766d19842ba5624cb41f6b873a513b620049e759a923894bef17742c","key":"/images/CSFLE_Master_Key_KMS.png","updated_at":"2023-04-06T14:25:40.000Z"},{"checksum":"ba1b4507fc789827edd02f979130e9633a0020b498cba915c0773403b37aedd5","key":"/images/compass-update-doc-button.png","updated_at":"2023-04-06T13:25:40.000Z"}],"created_at":"2023-04-06T13:25:40.000Z","updated_at":"2023-04-06T14:25:40.000Z","github_username":"babadook","deleted":false}}",
  "{"type":"page","data":{"_id":"646fa1958c4f35b1d3d83ee2","page_id":"docs/docsworker-xlarge/master/tutorial/update-documents","filename":"tutorial/update-documents.txt","ast":{"foo":"no updates"},"static_assets":[{"checksum":"ba1b4507fc789827edd02f979130e9633a0020b498cba915c0773403b37aedd5","key":"/images/compass-update-doc-button.png","updated_at":"2023-04-06T13:25:40.000Z"},{"checksum":"9617b2e1a8065e4a1699c15fc8ea1e085a41b4021debeaef1793a6cb431a9659","key":"/images/compass-update-edit-mode.png","updated_at":"2023-04-06T13:25:40.000Z"}],"created_at":"2023-04-06T13:25:40.000Z","updated_at":"2023-04-06T13:25:40.000Z","github_username":"babadook","deleted":false}}",
  "{"type":"page","data":{"_id":"646fa1958c4f35b1d3d83ee4","page_id":"docs/docsworker-xlarge/not-master/tutorial/update-documents","filename":"tutorial/update-documents.txt","ast":{},"static_assets":[],"created_at":"2023-04-06T13:25:40.000Z","updated_at":"2023-04-06T13:25:40.000Z","github_username":"babadook","deleted":false}}",
  "{"type":"page","data":{"_id":"646fa1958c4f35b1d3d83ee5","page_id":"landing/docsworker-xlarge/updated-when-deleted/index","filename":"index.txt","ast":{},"source":"wahoo","static_assets":[],"created_at":"2023-04-03T13:26:40.000Z","github_username":"babadook","deleted":true,"updated_at":"2023-04-06T15:25:40.000Z"}}",
  "{"type":"asset","data":{"checksum":"9617b2e1a8065e4a1699c15fc8ea1e085a41b4021debeaef1793a6cb431a9659","assetData":{"$binary":{"base64":"YXNzZXQtZXhhbXBsZQ==","subType":"00"}},"filenames":["/images/compass-update-edit-mode.png"]}}",
  "{"type":"asset","data":{"checksum":"ba1b4507fc789827edd02f979130e9633a0020b498cba915c0773403b37aedd5","assetData":{"$binary":{"base64":"YXNzZXQtZXhhbXBsZQ==","subType":"00"}},"filenames":["/images/compass-update-doc-button.png"]}}",
  "{"type":"asset","data":{"checksum":"d4dbe419766d19842ba5624cb41f6b873a513b620049e759a923894bef17742c","assetData":{"$binary":{"base64":"YXNzZXQtZXhhbXBsZQ==","subType":"00"}},"filenames":["/images/CSFLE_Master_Key_KMS.png"]}}",
]
`;

exports[`Test user routes /user/:githubUser/documents should return all metadata and pages for all branches and all projects for 1 github user: docs-builder-bot 1`] = `
[
  "{"type":"timestamp","data":1685714694420}",
  "{"type":"metadata","data":{"_id":"646bae50c41d7b9a472b6076","project":"docs","branch":"master","github_username":"docs-builder-bot","title":"MongoDB Manual","eol":false,"slugToTitle":{},"toctreeorder":{},"parentPaths":{},"static_files":{},"build_id":"642ec854c38bedd45ed3d188","created_at":"2023-04-06T13:25:40.000Z"}}",
  "{"type":"metadata","data":{"_id":"646bae50c41d7b9a472b6079","project":"no-pages","branch":"master","github_username":"docs-builder-bot","title":"Metadata only, no pages","eol":false,"slugToTitle":{},"toctreeorder":{},"parentPaths":{},"static_files":{},"build_id":"642ec854c38bedd45ed31235","created_at":"2023-04-06T13:25:40.000Z"}}",
  "{"type":"page","data":{"_id":"646fa1958c4f35b1d3d83ee3","page_id":"irrelevant-docs/docsworker-xlarge/master/tutorial/update-documents","filename":"tutorial/update-documents.txt","ast":{},"static_assets":[],"created_at":"2023-04-06T13:25:40.000Z","updated_at":"2023-04-06T13:25:40.000Z","github_username":"docs-builder-bot","deleted":false}}",
]
`;
